# GitInterrogator

./: .gitignore  Readme.md  main.py  pyproject.toml
.gi/: pyvenv.cfg
.gi/Scripts/: activate  activate.bat
pipeline/nodes/: ingestion.py
pipeline/tools/: code_chunker.py  github_loader.py
rag/: embedder.py  vector_store.py
scripts/: test_pipeline.py
